--- a/sdi-project2/sdi-project2.html
+++ b/sdi-project2/sdi-project2.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>KEVIN FLANAGAN :: Project 2 :: 1206</title>
+    <title>KEVIN FLANAGAN :: Project 2 :: SDI 1207</title>
     <link rel="stylesheet" href="sdi.css" type="text/css" />
 </head>
 <body>
 <header>
-    <h1>1206: KEVIN FLANAGAN</h1>
+    <h1>SDI 1207: KEVIN FLANAGAN</h1>
     <h2>Project 2</h2>
 </header>
 <article>
-<p>This project leaves off from Round 5 in the starting room.  You should have enough points to open the top door and move out into the level.  If you followed my strategy from the last project you can probably get to the Weapon Box also.</p>
-<p>Throughout these levels, try and open the doors with the Lunar landers and ride them at least once to launch the rocket.  This will unlock the Power Room so you can upgrade your current weapons.</p>
-<p>I try not to but if the zombies get a little "handsy" go ahead and find the Juggernaut power up which increases your health resistance.  I use these levels to unlock everything important and get some good weapons to set the tone.</p>
+<p>In this space you should provide a short (one paragraph) explanation of your theme and why you chose it.</p>
+<p>You may also use this space to explain any elements of your code story that may not be entirely clear.  For example, if your theme is thirteenth century Italian poetry, not everyone may be familiar with that.</p>
+<p>Don't forget to replace all of the capitalized elements in this template with your information.  Your term number should be in a <em>yymm</em> format, including the year and the month.</p>
 </article>
 <footer>
-    <p>7 June 2012, Kevin Flanagan</p>
+    <p>COMPLETION DATE, Kevin Flanagan</p>
 </footer>
 <script type="text/javascript" src="main.js"></script>
 </body>
