--- a/sdi-project2/sdi-project2.html
+++ b/sdi-project2/sdi-project2.html
@@ -10,12 +10,12 @@
     <h2>Project 2</h2>
 </header>
 <article>
-<p>In this space you should provide a short (one paragraph) explanation of your theme and why you chose it.</p>
-<p>You may also use this space to explain any elements of your code story that may not be entirely clear.  For example, if your theme is thirteenth century Italian poetry, not everyone may be familiar with that.</p>
-<p>Don't forget to replace all of the capitalized elements in this template with your information.  Your term number should be in a <em>yymm</em> format, including the year and the month.</p>
+<p>This week I chose to keep the same theme as before.  I just refactored the code where necessary and added a few more things to comply with the flowchart.  I started a new job which is turning out to be ten times better than the last one I had.  There is so much more work to be done.</p>
+<p>I am mainly focusing on the closing aspect of my day.  That in itself has many tasks to accomplish.  So, this story just tells what I do when the doors close at the end of the day.</p>
+<p></p>
 </article>
 <footer>
-    <p>COMPLETION DATE, Kevin Flanagan</p>
+    <p>12 July 2012, Kevin Flanagan</p>
 </footer>
 <script type="text/javascript" src="main.js"></script>
 </body>
