--- a/sdi-project3/sdi-project3.html
+++ b/sdi-project3/sdi-project3.html
@@ -10,12 +10,12 @@
     <h2>Project 3</h2>
 </header>
 <article>
-<p></p>
-<p></p>
+<p>My story this week is much the same as last week just refactored to comply with the code requirements for this weeks project.</p>
+<p>It's all about a typical day closing up at the motorcycle shop that I work at.</p>
 <p></p>
 </article>
 <footer>
-    <p>20 July 2012, Kevin Flanagan</p>
+    <p>19 July 2012, Kevin Flanagan</p>
 </footer>
 <script type="text/javascript" src="main.js"></script>
 </body>
