Made some final filename changes.

--- a/Flanagan_Kevin_Assignment3/sdi-project3.html
+++ b/Flanagan_Kevin_Assignment3/sdi-project3.html
@@ -15,8 +15,8 @@
 <p></p>
 </article>
 <footer>
-    <p>19 July 2012, Kevin Flanagan</p>
+    <p>22 July 2012, Kevin Flanagan</p>
 </footer>
-<script type="text/javascript" src="main.js"></script>
+<script type="text/javascript" src="Flanagan_Kevin_Assignment3.js"></script>
 </body>
 </html>
