--- a/VFW/Flanagan_Kevin_Project1/additem.html
+++ b/VFW/Flanagan_Kevin_Project1/additem.html
@@ -10,7 +10,8 @@
 		<meta name="keywords" content="HTML5, Mobile Development, Full Sail University" />
 		<meta name="robots" content="index, follow" />
 		<meta name="viewport" comtent="user-scalable=no, width=device-width" />
-		
+		<link rel="stylesheet" type="text/css" hre="CSS/styles.css" media="only screen and (max-width: 485px)" />
+
 		<!-- Document Title -->
 		<title>Add Item Page</title>
 
@@ -20,29 +21,25 @@
 	<body>
 		
 		<!-- Header -->
-		<h1>Biz Card Storage</h1>
+		<header><h1 id="test">Biz Card Storage</h1></header>
+
+		<!-- Clear and Display Data -->
+		<nav>
+			<a href="#" id="clear">Clear Stored Data</a>
+			<a href="#" id="displaylink">Display Data</a>
+		</nav>
 
 		<!-- Form Start -->
-		<form action="#" method="post">
-			<fieldset>
+		<form action="#" method="post" id="contactForm" />
+			<fieldset id="contactFieldset">
 				<legend>Add A Card</legend>
 
-					<!-- App Navigation -->
+					<!-- Selection Group -->
 					<nav>
-						<ul>
-							<li>Category</li>
+						<ul id="choosing">
+							<li id="select"><label for="category">Choose A Category:</label><br /></li>
 						</ul>
 					</nav>
-
-					<!-- Selection Group -->
-					<select>
-						<optgroup label="Choose A Category">
-							<option>Dealership</option>
-							<option>Vendor</option>
-							<option>Personal</option>
-							<option>Miscellaneous</option>
-						</optgroup>
-					</select>
 
 					<!-- Address and Contact Input -->
 					<nav>
@@ -58,12 +55,13 @@
 					</nav>
 
 					<!-- Radio Button -->
-		
-
-					<!-- Save as Favorite -->
 					<nav>
 						<ul>
 							<li><input type="checkbox" name="color" value="Blue"/><p>Save as favorite?</p></li>
+						</ul>
+					</nav>
+					
+
 
 					<!-- Date Added -->
 					<label for="dateadded">Date added:</label>
@@ -73,19 +71,15 @@
 					<li><label for="notes">Notes:</label><textarea id="notes"></textarea>
 						<input type="hidden" value="true"/>
 					</li>
+			
 			</fieldset>
+
+			<!-- Submit Button -->
+			<input type="submit" value="Save Card" id="submit" /><br />
 		</form>
-
-		<!-- Submit Button -->
-		<input type="submit" value="Add Entry"/>
-
-			<!-- Footer -->
-			<footer>
-				<nav>
-					<a href="#">Clear Store Data</a>
-					<a href="#">Display Data</a>
-				</nav>
-			</footer>
+		
+		<!-- Javascript Link -->
+		<script src="JS/main.js" type="text/javascript"></script>
 	</body>
 </html>
 
