Completed app...just adding more styling.

--- a/VFW/Flanagan_Kevin_Project3/index.html
+++ b/VFW/Flanagan_Kevin_Project3/index.html
@@ -1,3 +1,7 @@
+<!--Kevin Flanagan-->
+<!--Web App Part 3-->
+<!--VFW Term 1208 -->
+
 <!DOCTYPE html>
 <html>	
 	
@@ -10,6 +14,7 @@
 		<meta name="keywords" content="HTML5, Mobile Development, Full Sail University" />
 		<meta name="robots" content="index, follow" />
 		<meta name="viewport" comtent="user-scalable=no, width=device-width" />
+		<link href="CSS/styles.css" rel="stylesheet" />
 		
 		<!-- Document Title -->
 		<title>Biz Card Storage Main Page</title>
