Added Project 1 first files.

--- a/VFW/Flanagan_Kevin_Project1/additem.html
+++ b/VFW/Flanagan_Kevin_Project1/additem.html
@@ -1,86 +1,13 @@
-<!DOCTYPE html>
-<html>	
-	
-	<!--HTML DOCUMENT HEADER -->
-	<head>
-		
-		<!-- Meta Tags -->
-		<meta charset="utf-8" />
-		<meta name="description" content="Add Item Page" />
-		<meta name="keywords" content="HTML5, Mobile Development, Full Sail University" />
-		<meta name="robots" content="index, follow" />
-		<meta name="viewport" comtent="user-scalable=no, width=device-width" />
-		<link rel="stylesheet" type="text/css" hre="CSS/styles.css" media="only screen and (max-width: 485px)" />
-
-		<!-- Document Title -->
-		<title>Add Item Page</title>
-
-	</head>
-	
-	<!-- Document Body -->
-	<body>
-		
-		<!-- Header -->
-		<header><h1 id="test">Biz Card Storage</h1></header>
-
-		<!-- Clear and Display Data -->
-		<nav>
-			<a href="#" id="clear">Clear Stored Data</a>
-			<a href="#" id="displaylink">Display Data</a>
-		</nav>
-
-		<!-- Form Start -->
-		<form action="#" method="post" id="contactForm" />
-			<fieldset id="contactFieldset">
-				<legend>Add A Card</legend>
-
-					<!-- Selection Group -->
-					<nav>
-						<ul id="choosing">
-							<li id="select"><label for="category">Choose A Category:</label><br /></li>
-						</ul>
-					</nav>
-
-					<!-- Address and Contact Input -->
-					<nav>
-						<ul>
-							<li><label for="companyName">Company Name:</label> <input type="text" id="companyName"/></li>
-							<li><label for="firstName">First Name:</label> <input type="text" id="firstName"/></li>
-							<li><label for="lastName">Last Name:</label> <input type="text" id="lastName"/></li>
-							<li><label for="address">Address:</label> <input type="text" id="address"/></li>
-							<li><label for="city">City:</label> <input type="text" id="city"/></li>
-							<li><label for="state">State:</label> <input type="text" id="state"/></li>
-							<li><label for="email">Email:</label> <input type="email" id="email"/></li>
-						</ul>		
-					</nav>
-
-					<!-- Radio Button -->
-					<nav>
-						<ul>
-							<li><input type="checkbox" name="color" value="Blue"/><p>Save as favorite?</p></li>
-						</ul>
-					</nav>
-					
+<!--Kevin Flanagan-->
+<!--Web App Part 1-->
+<!--VFW Term 1209 -->
 
 
-					<!-- Date Added -->
-					<label for="dateadded">Date added:</label>
-					<input type="date" min="2012-01-01" max="2015-05-05" id="dateadded" name="dateadded" required aria-required="true" placeholder="2012-01-01">
-			
-					<!-- Notes -->
-					<li><label for="notes">Notes:</label><textarea id="notes"></textarea>
-						<input type="hidden" value="true"/>
-					</li>
-			
-			</fieldset>
 
-			<!-- Submit Button -->
-			<input type="submit" value="Save Card" id="submit" /><br />
-		</form>
-		
-		<!-- Javascript Link -->
-		<script src="JS/main.js" type="text/javascript"></script>
-	</body>
-</html>
+
+
+
+
+
 
 
