--- a/VFW/Flanagan_Kevin_Project1/index.html
+++ b/VFW/Flanagan_Kevin_Project1/index.html
@@ -1,37 +1,5 @@
-<!DOCTYPE html>
-<html>	
-	
-	<!--HTML DOCUMENT HEADER -->
-	<head>
-		
-		<!-- Meta Tags -->
-		<meta charset="utf-8" />
-		<meta name="description" content="Biz Card Storage Main Page" />
-		<meta name="keywords" content="HTML5, Mobile Development, Full Sail University" />
-		<meta name="robots" content="index, follow" />
-		<meta name="viewport" comtent="user-scalable=no, width=device-width" />
-		
-		<!-- Document Title -->
-		<title>Biz Card Storage Main Page</title>
-	
-	</head>
-	
-	<!-- Document Body -->
-	<body>
-		
-		<!-- Heading Group -->
-		<header>
-			<hgroup>
-				<h1>Biz Card Storage</h1>
-				<p>An app that stores your important business card contacts.</p>
-				<h2>Get Started...</h2>
-			</hgroup>
-		</header>
+<!--Kevin Flanagan-->
+<!--Web App Part 1-->
+<!--VFW Term 1209 -->
 
-		<!-- App Navigation -->
-		<nav>
-			<!-- Add Item Link -->
-			<a href="additem.html">Add A Card</a>
-		</nav>
 
-	</body>
