Added my Project 1 rough draft.

--- a/VFW/Flanagan_Kevin_Project1/additem.html
+++ b/VFW/Flanagan_Kevin_Project1/additem.html
@@ -2,7 +2,50 @@
 <!--Web App Part 1-->
 <!--VFW Term 1209 -->
 
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="description" content="Add Toy Page" />
+		<meta name="keywords" content="HTML5, Mobile Development, Full Sail University" />
+		<meta name="robots" content"index, follow" />
+		<meta name="viewport" content="user-scalable=no, width=device-width" />
+		<title>Add Toy Page</title>
+	</head>
+	<body>
+		<header><h1 id="test">Dealer Toy Inventory</h1><header>
+		<nav>
+			<a href="#" id="clear">Clear Stored Data</a>
+			<a href="#" id="displaylink">Display Data</a>
+			<a href="additem.html" id="addNew" style="display:none;">Add New Toy</a>
+		</nav>
+		<form action="#" method="post" id="contactForm" />
+			<fieldset id="contactFieldset">
+				<legend>Add A Toy</legend>
+				<ul id="errors"></ul>
+				<ul id="questions">
+					<li id="select"><label for="groups">Type Of Toy:</label><br /></li>
+					<li><label for="year">Year: </label><input type="text" id="year" /></li>
+					<li><label for="manufacturer">Manufacturer: </label><input type="text" id="manufacturer" /></li>
+					<li><label for="model">Model: </label><input type="text" id="model" /></li>
+						<ul class="checkbox">
+							<li><input type="radio" id="crated" value="Crated" name="status" /><label for="crated">Still In Crate</label></li>
+							<li><input type="radio" id="alreadybuilt" value="AlreadyBuilt" name="status" /><label for="alreadybuilt">Already Built</label></li>
+						</ul>
+					</li>
+					<li><input type="checkbox" id="floor" value="Yes" class="checkbox" /><label for="floor">Is The Unit On The Showroom Floor?</label></li>
+					<li><label for="date">Date Added:</label>
+						<input type="date" min="1962-01-01" max="2017-12-12" id="date" name="date" required aria-required="true" placeholder="1962-01-01">
+					</li>
+					<li><label for="notes">Notes:</label><textarea id="notes"></textarea>
+						<input type="hidden" value="true"/>
+					</li>
+				</ul>
+			</fieldset>
+			<input type="submit" value="Store Toy" id="submit" /><br />
+		</form>
+	</body>
+</html>
 
 
 
