--- a/VFW/Flanagan_Kevin_Project2/additem.html
+++ b/VFW/Flanagan_Kevin_Project2/additem.html
@@ -11,6 +11,7 @@
 		<meta name="robots" content"index, follow" />
 		<meta name="viewport" content="user-scalable=no, width=device-width" />
 		<title>Add Toy Page</title>
+		<link rel="stylesheet" type="text/css" href="CSS/styles.css" media="only screen and (max-width: 485px)" />
 	</head>
 	<body>
 		<header><h1 id="test">Dealer Inventory</h1></header>
@@ -47,6 +48,7 @@
 			</fieldset>
 			<input type="submit" value="Store Toy" id="submit" /><br />
 		</form>
+		<script src="JS/main.js" type="text/javascript"></script>
 	</body>
 </html>
 
