--- a/VFW/Flanagan_Kevin_Project2/index.html
+++ b/VFW/Flanagan_Kevin_Project2/index.html
@@ -1,5 +1,5 @@
 <!--Kevin Flanagan-->
-<!--Web App Part 1-->
+<!--Web App Part 2-->
 <!--VFW Term 1209 -->
 
 <!DOCTYPE html>
@@ -7,9 +7,10 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="description" content="Dealer Inventory Main Page" />
-		<meta name="keywords" content="HTML 5, Mobile Development, Full Sail University" />
+		<meta name="keywords" content="HTML5, Mobile Development, Full Sail University" />
 		<meta name="robots" content="index, follow" />
 		<meta name="viewport" content="user-scalable=no, width=device-width" />
+		<link href="CSS/styles.css" rel="stylesheet" />
 		<title>Dealer Inventory Main Page</title>
 	<head/>
 	<body>
