--- a/VFW/Flanagan_Kevin_Project2/index.html
+++ b/VFW/Flanagan_Kevin_Project2/index.html
@@ -12,7 +12,7 @@
 		<meta name="viewport" content="user-scalable=no, width=device-width" />
 		<link href="CSS/styles.css" rel="stylesheet" />
 		<title>Dealer Inventory Main Page</title>
-	<head/>
+	</head>
 	<body>
 		<header>
 			<hgroup>
