Fixed some errors and added Icon Images.

--- a/VFW/Flanagan_Kevin_Project3/additem.html
+++ b/VFW/Flanagan_Kevin_Project3/additem.html
@@ -34,7 +34,7 @@
 					<li><label for="vin">*VIN: </label><input type="text" id="vin" /></li>
 					<ul class="checkbox">
 						<li><input type="radio" id="crated" value="Yes" name="status" /><label for="crated">Still In Crate</label></li>
-						<li><input type="radio" id="alreadybuilt" value="Already Built" name="status" /><label for="alreadybuilt">Already Built</label></li>
+						<li><input type="radio" id="alreadyBuilt" value="Already Built" name="status" /><label for="alreadybuilt">Already Built</label></li>
 					</ul>
 					<li><input type="checkbox" id="floor" value="Yes" class="checkbox" /><label for="floor">Is The Unit On The Showroom Floor?</label></li>
 					<li><label for="price">Price: </label><input type="range" min="0" max="20000" id="price" /></li>
